did accordion menu, need to improve

--- a/5-8_Making-an-Accordion-Menu/styles.css
+++ b/5-8_Making-an-Accordion-Menu/styles.css
@@ -5,3 +5,30 @@
     font-weight: bold;
     background-color: #0ff;
 }
+
+.menu-items {
+    display: none;
+}
+
+a {
+    display: block;
+    border-bottom: 1px solid #fff;
+    text-decoration: none;
+    background: #00f;
+    color: #fff;
+    padding: 10px;
+    font-weight: bold;
+    width: 190px;
+}
+
+.menu-items a:hover {
+    background: #000;
+}
+
+li {
+    display: inline;
+}
+
+ul {
+    display: inline;
+}
